[gd_scene load_steps=39 format=2]

[ext_resource path="res://Scripts/Recipe_Spam.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Recipe_Nori.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Recipe_Rice.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Recipe_Wrap.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Recipe.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Recipe_Cook.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Recipe_Price.gd" type="Script" id=7]
[ext_resource path="res://Assets/Images/RecipeImage.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/Foglihten-068.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Fonts/MochaCookies.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=24]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=27]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=26]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=28]
size = 70
font_data = ExtResource( 10 )

[node name="Recipe" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 8 )

[node name="RecipeVbox" type="VBoxContainer" parent="."]
margin_left = 332.0
margin_top = 81.0
margin_right = 758.0
margin_bottom = 377.0

[node name="SpamCountContainer" type="HBoxContainer" parent="RecipeVbox"]
margin_right = 476.0
margin_bottom = 66.0
script = ExtResource( 1 )

[node name="SpamLabelContainer" type="VBoxContainer" parent="RecipeVbox/SpamCountContainer"]
margin_right = 84.0
margin_bottom = 66.0

[node name="SpamLabel" type="RichTextLabel" parent="RecipeVbox/SpamCountContainer/SpamLabelContainer"]
margin_right = 84.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 22 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Spam"

[node name="SpamOwnedContainer" type="HBoxContainer" parent="RecipeVbox/SpamCountContainer/SpamLabelContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 66.0

[node name="SpamOwned" type="RichTextLabel" parent="RecipeVbox/SpamCountContainer/SpamLabelContainer/SpamOwnedContainer"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "100"

[node name="SpamOwnedLabel" type="RichTextLabel" parent="RecipeVbox/SpamCountContainer/SpamLabelContainer/SpamOwnedContainer"]
margin_left = 34.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
custom_fonts/normal_font = SubResource( 3 )
text = "Cans"

[node name="SpamMinus" type="Button" parent="RecipeVbox/SpamCountContainer"]
margin_left = 88.0
margin_right = 108.0
margin_bottom = 66.0
rect_min_size = Vector2( 20, 10 )
custom_fonts/font = SubResource( 4 )
text = "-"

[node name="SpamCount" type="RichTextLabel" parent="RecipeVbox/SpamCountContainer"]
margin_left = 112.0
margin_right = 142.0
margin_bottom = 66.0
rect_min_size = Vector2( 30, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "100"

[node name="SpamPlus" type="Button" parent="RecipeVbox/SpamCountContainer"]
margin_left = 146.0
margin_right = 166.0
margin_bottom = 66.0
rect_min_size = Vector2( 20, 40 )
custom_fonts/font = SubResource( 6 )
text = "+"

[node name="SpamDesc" type="RichTextLabel" parent="RecipeVbox/SpamCountContainer"]
margin_left = 170.0
margin_right = 320.0
margin_bottom = 66.0
rect_min_size = Vector2( 150, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "Slices Per Can"

[node name="RiceCountContainer" type="HBoxContainer" parent="RecipeVbox"]
margin_top = 70.0
margin_right = 476.0
margin_bottom = 136.0
script = ExtResource( 3 )

[node name="RiceLabelContainer" type="VBoxContainer" parent="RecipeVbox/RiceCountContainer"]
margin_right = 84.0
margin_bottom = 66.0

[node name="RiceLabel" type="RichTextLabel" parent="RecipeVbox/RiceCountContainer/RiceLabelContainer"]
margin_right = 84.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 22 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
text = "Rice"

[node name="RiceOwnedContainer" type="HBoxContainer" parent="RecipeVbox/RiceCountContainer/RiceLabelContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 66.0

[node name="RiceOwned" type="RichTextLabel" parent="RecipeVbox/RiceCountContainer/RiceLabelContainer/RiceOwnedContainer"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 9 )
text = "100"

[node name="RiceOwnedLabel" type="RichTextLabel" parent="RecipeVbox/RiceCountContainer/RiceLabelContainer/RiceOwnedContainer"]
margin_left = 34.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 10 )
text = "Bags"

[node name="RiceDesc" type="RichTextLabel" parent="RecipeVbox/RiceCountContainer"]
margin_left = 88.0
margin_right = 238.0
margin_bottom = 66.0
rect_min_size = Vector2( 150, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 11 )
text = "1 Cup = 2 Musubi"

[node name="NoriCountContainer" type="HBoxContainer" parent="RecipeVbox"]
margin_top = 140.0
margin_right = 476.0
margin_bottom = 206.0
script = ExtResource( 2 )

[node name="NoriLabelContainer" type="VBoxContainer" parent="RecipeVbox/NoriCountContainer"]
margin_right = 84.0
margin_bottom = 66.0

[node name="NoriLabel" type="RichTextLabel" parent="RecipeVbox/NoriCountContainer/NoriLabelContainer"]
margin_right = 84.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 22 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "Nori"

[node name="NoriOwnedContainer" type="HBoxContainer" parent="RecipeVbox/NoriCountContainer/NoriLabelContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 66.0

[node name="NoriOwned" type="RichTextLabel" parent="RecipeVbox/NoriCountContainer/NoriLabelContainer/NoriOwnedContainer"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 13 )
text = "100"

[node name="NoriOwnedLabel" type="RichTextLabel" parent="RecipeVbox/NoriCountContainer/NoriLabelContainer/NoriOwnedContainer"]
margin_left = 34.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Sheets"

[node name="NoriMinus" type="Button" parent="RecipeVbox/NoriCountContainer"]
margin_left = 88.0
margin_right = 108.0
margin_bottom = 66.0
rect_min_size = Vector2( 20, 10 )
text = "-"

[node name="NoriCount" type="RichTextLabel" parent="RecipeVbox/NoriCountContainer"]
margin_left = 112.0
margin_right = 142.0
margin_bottom = 66.0
rect_min_size = Vector2( 30, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 15 )
text = "100"

[node name="NoriPlus" type="Button" parent="RecipeVbox/NoriCountContainer"]
margin_left = 146.0
margin_right = 166.0
margin_bottom = 66.0
rect_min_size = Vector2( 20, 40 )
text = "+"

[node name="NoriDesc" type="RichTextLabel" parent="RecipeVbox/NoriCountContainer"]
margin_left = 170.0
margin_right = 320.0
margin_bottom = 66.0
rect_min_size = Vector2( 150, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 16 )
text = "Pieces Per Sheet"

[node name="WrapCountContainer" type="HBoxContainer" parent="RecipeVbox"]
margin_top = 210.0
margin_right = 476.0
margin_bottom = 276.0
script = ExtResource( 4 )

[node name="WrapLabelContainer" type="VBoxContainer" parent="RecipeVbox/WrapCountContainer"]
margin_right = 84.0
margin_bottom = 66.0

[node name="WrapLabel" type="RichTextLabel" parent="RecipeVbox/WrapCountContainer/WrapLabelContainer"]
margin_right = 84.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 22 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 17 )
text = "Wrap"

[node name="WrapOwnedContainer" type="HBoxContainer" parent="RecipeVbox/WrapCountContainer/WrapLabelContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 66.0

[node name="WrapOwned" type="RichTextLabel" parent="RecipeVbox/WrapCountContainer/WrapLabelContainer/WrapOwnedContainer"]
margin_right = 30.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 18 )
text = "100"

[node name="WrapOwnedLabel" type="RichTextLabel" parent="RecipeVbox/WrapCountContainer/WrapLabelContainer/WrapOwnedContainer"]
margin_left = 34.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 19 )
text = "Boxes"

[node name="WrapDesc" type="RichTextLabel" parent="RecipeVbox/WrapCountContainer"]
margin_left = 88.0
margin_right = 238.0
margin_bottom = 66.0
rect_min_size = Vector2( 150, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 20 )
text = "1 Box = 10 Musubi"

[node name="CookCount" type="HBoxContainer" parent="RecipeVbox"]
margin_top = 280.0
margin_right = 476.0
margin_bottom = 350.0
script = ExtResource( 6 )

[node name="CookLabelContainer" type="VBoxContainer" parent="RecipeVbox/CookCount"]
margin_right = 150.0
margin_bottom = 70.0

[node name="CookLabel" type="RichTextLabel" parent="RecipeVbox/CookCount/CookLabelContainer"]
margin_right = 150.0
margin_bottom = 70.0
rect_min_size = Vector2( 150, 70 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "How many will you cook?"

[node name="CookMinus10" type="Button" parent="RecipeVbox/CookCount"]
margin_left = 154.0
margin_right = 187.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 10 )
text = "-10"

[node name="CookMinus" type="Button" parent="RecipeVbox/CookCount"]
margin_left = 191.0
margin_right = 216.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 10 )
text = "-1"

[node name="CookCount" type="RichTextLabel" parent="RecipeVbox/CookCount"]
margin_left = 220.0
margin_right = 250.0
margin_bottom = 70.0
rect_min_size = Vector2( 30, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 22 )
text = "100"

[node name="CookPlus" type="Button" parent="RecipeVbox/CookCount"]
margin_left = 254.0
margin_right = 282.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 40 )
text = "+1"

[node name="CookPlus10" type="Button" parent="RecipeVbox/CookCount"]
margin_left = 286.0
margin_right = 322.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 40 )
text = "+10"

[node name="CookDesc" type="RichTextLabel" parent="RecipeVbox/CookCount"]
margin_left = 326.0
margin_right = 476.0
margin_bottom = 70.0
rect_min_size = Vector2( 150, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 23 )
text = "Musubi"

[node name="Price" type="HBoxContainer" parent="RecipeVbox"]
margin_top = 354.0
margin_right = 476.0
margin_bottom = 404.0
script = ExtResource( 7 )

[node name="PriceLabelContainer" type="VBoxContainer" parent="RecipeVbox/Price"]
margin_right = 100.0
margin_bottom = 50.0

[node name="CookLabel" type="RichTextLabel" parent="RecipeVbox/Price/PriceLabelContainer"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 24 )
text = "Set Musubi Price"

[node name="CookMinus1" type="Button" parent="RecipeVbox/Price"]
margin_left = 104.0
margin_right = 157.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 10 )
text = "-$1.00"

[node name="CookMinus10" type="Button" parent="RecipeVbox/Price"]
margin_left = 161.0
margin_right = 214.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 10 )
text = "-$0.10"

[node name="CookCount" type="RichTextLabel" parent="RecipeVbox/Price"]
margin_left = 218.0
margin_right = 288.0
margin_bottom = 50.0
rect_min_size = Vector2( 70, 40 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 25 )
text = "100"

[node name="CookPlus10" type="Button" parent="RecipeVbox/Price"]
margin_left = 292.0
margin_right = 348.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 40 )
text = "+$0.10"

[node name="CookPlus1" type="Button" parent="RecipeVbox/Price"]
margin_left = 352.0
margin_right = 408.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 40 )
text = "+$1.00"

[node name="MapButton" type="Button" parent="."]
margin_left = 429.0
margin_top = 488.0
margin_right = 618.0
margin_bottom = 530.0
custom_fonts/font = SubResource( 27 )
text = "WE GO"

[node name="BackButton" type="Button" parent="."]
margin_left = 34.0
margin_top = 33.0
margin_right = 108.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 26 )
text = "Back"

[node name="Label" type="Label" parent="."]
margin_left = 377.0
margin_top = 8.0
margin_right = 672.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "WE GO COOK"
align = 1
valign = 1

[connection signal="pressed" from="RecipeVbox/SpamCountContainer/SpamMinus" to="RecipeVbox/SpamCountContainer" method="_on_SpamMinus_pressed"]
[connection signal="pressed" from="RecipeVbox/SpamCountContainer/SpamPlus" to="RecipeVbox/SpamCountContainer" method="_on_SpamPlus_pressed"]
[connection signal="pressed" from="RecipeVbox/NoriCountContainer/NoriMinus" to="RecipeVbox/NoriCountContainer" method="_on_NoriMinus_pressed"]
[connection signal="pressed" from="RecipeVbox/NoriCountContainer/NoriPlus" to="RecipeVbox/NoriCountContainer" method="_on_NoriPlus_pressed"]
[connection signal="pressed" from="RecipeVbox/CookCount/CookMinus10" to="RecipeVbox/CookCount" method="_on_CookMinus10_pressed"]
[connection signal="pressed" from="RecipeVbox/CookCount/CookMinus" to="RecipeVbox/CookCount" method="_on_CookMinus_pressed"]
[connection signal="pressed" from="RecipeVbox/CookCount/CookPlus" to="RecipeVbox/CookCount" method="_on_CookPlus_pressed"]
[connection signal="pressed" from="RecipeVbox/CookCount/CookPlus10" to="RecipeVbox/CookCount" method="_on_CookPlus10_pressed"]
[connection signal="pressed" from="RecipeVbox/Price/CookMinus1" to="RecipeVbox/Price" method="_on_CookMinus1_pressed"]
[connection signal="pressed" from="RecipeVbox/Price/CookMinus10" to="RecipeVbox/Price" method="_on_CookMinus10_pressed"]
[connection signal="pressed" from="RecipeVbox/Price/CookPlus10" to="RecipeVbox/Price" method="_on_CookPlus10_pressed"]
[connection signal="pressed" from="RecipeVbox/Price/CookPlus1" to="RecipeVbox/Price" method="_on_CookPlus1_pressed"]
[connection signal="pressed" from="MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
